--- a/NodeJS/aulas/rentalx/package.json
+++ b/NodeJS/aulas/rentalx/package.json
@@ -4,24 +4,24 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules --respawn src/server.ts",
+    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn ./src/server.ts",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli"
   },
   "dependencies": {
-    "csv-parse": "^4.16.3",
+    "csv-parse": "^4.15.3",
     "express": "^4.17.1",
-    "multer": "^1.4.3",
+    "multer": "^1.4.2",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.1.6",
-    "tsyringe": "^4.4.0",
+    "tsyringe": "^4.5.0",
     "typeorm": "^0.2.31",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@types/express": "^4.17.13",
+    "@types/express": "^4.17.11",
     "@types/multer": "^1.4.7",
-    "@types/swagger-ui-express": "^4.1.3",
+    "@types/swagger-ui-express": "^4.1.2",
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@typescript-eslint/parser": "^4.31.0",
