--- a/NodeJS/aulas/rentalx/docker-compose.yml
+++ b/NodeJS/aulas/rentalx/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     ports:
       - 3333:3333
     volumes:
-      - .:/usr/app
+      - ./:/usr/app
     networks:
       - app-network
     links:
