--- a/ReactJS/Projects/dashgo/package.json
+++ b/ReactJS/Projects/dashgo/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^1.6.8",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@hookform/resolvers": "^2.8.1",
     "@types/node": "^16.9.4",
     "@types/react": "^17.0.22",
     "apexcharts": "^3.28.3",
@@ -21,8 +22,10 @@
     "react": "17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.15.4",
     "react-icons": "^4.2.0",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "eslint": "7.32.0",
