--- a/ReactJS/Projects/dashgo/package.json
+++ b/ReactJS/Projects/dashgo/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^17.0.22",
     "apexcharts": "^3.28.3",
     "framer-motion": "^4.1.17",
+    "miragejs": "^0.1.41",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-apexcharts": "^1.3.9",
