--- a/ReactNative/rentalx/package.json
+++ b/ReactNative/rentalx/package.json
@@ -10,6 +10,9 @@
   "dependencies": {
     "@expo-google-fonts/archivo": "^0.2.0",
     "@expo-google-fonts/inter": "^0.2.0",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^6.0.5",
+    "@react-navigation/stack": "^6.0.10",
     "expo": "~41.0.1",
     "expo-app-loading": "^1.1.2",
     "expo-font": "~9.1.0",
@@ -37,6 +40,7 @@
     "@types/styled-components-react-native": "^5.1.1",
     "babel-preset-expo": "~8.3.0",
     "jest-expo": "~41.0.0",
+    "react-native-safe-area-context": "^3.3.2",
     "react-native-svg-transformer": "^0.14.3",
     "typescript": "~4.0.0"
   },
