feat: art: rn rentalx - list cars from api

--- a/ReactNative/rentalx/tsconfig.json
+++ b/ReactNative/rentalx/tsconfig.json
@@ -20,7 +20,9 @@
   "exclude": [
     "node_modules",
     "babel.config.js",
-    "metro.config.js"
+    "metro.config.js",
+    "ios",
+    "android"
   ],
   "include": [
     "**/*.ts",
